--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-body {
+    font-family: "Roboto", sans-serif;
 }
 /* ini navbar */
 .background-navy {
@@ -14,13 +13,19 @@ body {
     font-size: 24px;
     
 }
-.link1 {
+.link {
     font-size: 18px;
     color: #e5e7eb;
+    list-style: none;
+    text-decoration: none;
+    
 }
 /* ini bawahnya navbar */
 .div1 {
     background-color: #1f2937;
+    width: auto;
+    height: 500px;
+
 }
 .hero-main {
     font-size: 48px;
@@ -38,4 +43,23 @@ div {
 /* ini quote */
 .div3 {
     background-color: #e5e7eb;
+}
+
+/* flex boxxx */
+nav {
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+    padding-top: 5px;
+}
+.link {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    padding-right: 1rem;
+}
+.header-logo {
+    display: flex;
+    align-items: center;
+    padding-left: 1rem;
 }
