--- a/style.css
+++ b/style.css
@@ -63,3 +63,11 @@ nav {
     align-items: center;
     padding-left: 1rem;
 }
+.container1 {
+    display: flex;
+    flex-direction: row;
+    padding-left: 1rem;
+    justify-content: space-between;
+    gap: 8px;
+
+}
