--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Roboto", sans-serif;
+    font-family: "Roboto";
 }
 /* ini navbar */
 .background-navy {
@@ -41,7 +41,7 @@
     height: 30px;
     background-color: #3882f6;
     border: solid #3882f6 ;
-    border-radius: 5px;
+    border-radius: 10px;
     color: white;
     font-weight: bold;
 }
@@ -95,7 +95,7 @@ nav {
 .container2 {
     display: flex;
     justify-content: center;
-    padding-top: 20px;
+    padding-top: 40px;
     padding-bottom: 45px;
 }
 .container3 {
@@ -109,7 +109,7 @@ nav {
 }
 img {
     width: 100px;
-    padding-top: 30px;
+    padding-top: 10px;
 }
 .text {
     text-align: center;
@@ -126,10 +126,11 @@ img {
     align-items: center;
     gap: 50px;
 }
+
+
 .quote {
     font-size: 36px;
     font-style: italic;
-    font-weight: lighter;
     color: #1f2937;
     width: 450px;
 }
@@ -139,4 +140,41 @@ img {
     padding-top: 20px;
     display: flex;
     justify-content: flex-end;
+}
+
+
+.action { 
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.call {
+    font-weight: bold;
+    color: #F9FAF8;
+    font-size: 20px;
+}
+.call-desc {
+    font-weight: lighter;
+    color: #e5e7eb;
+    font-size: 18px;
+}
+.action-box {
+    background-color: #3882f6;
+    height: 100px;
+    width: 900px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.button2 {
+    width: 100px;
+    height: 30px;
+    background-color: #3882f6;
+    border: solid #F9FAF8 ;
+    border-radius: 10px;
+    border-width: 2px;
+    color: #e5e7eb;
+    font-weight: bold;
 }
